@@ -1,5 +1,11 @@
 2005-11-15  Vincent Noel <vincent.noel@gmail.com>
 
+	* logview.c: (logview_init):
+	* logview.h:
+	* main.c: (main): Be smarter when showing the widget.
+
+2005-11-15  Vincent Noel <vincent.noel@gmail.com>
+
 	* main.c (main): Show a "busy" cursor while loading logs. 
 
 2005-11-15  Vincent Noel <vincent.noel@gmail.com>
